--- a/container.css
+++ b/container.css
@@ -1,7 +1,18 @@
+body {
+    width: 100vw;
+    height: 100vh;
+    background-image: url("background.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-size: cover;
+    background-position: center;
+}
+
 .container {
     box-sizing: border-box;
-    background-color: rgba(255, 255, 255, 0.318);
-    margin: 0 auto;
+    background-color: rgb(241 241 241);
+    margin-top: 200px;
+    margin: 100px auto;
     max-width: 600px;
     padding: 10px 30px;
     font-family: "Lato", sans-serif;
