--- a/css/container.css
+++ b/css/container.css
@@ -1,5 +1,5 @@
-body {
-    background-image: url("background.jpg");
+.body {
+    background-image: url("../pictures/background.jpg");
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
@@ -9,7 +9,6 @@ body {
 .container {
     box-sizing: border-box;
     background-color: rgb(241 241 241);
-    margin-top: 200px;
     margin: 100px auto;
     max-width: 600px;
     padding: 10px 30px;
